# f--for-fun-as-Haskell-example

./: FSharpForFunHaskellExamples.cabal  README.md
src/: UnderstandingMapandApply.hs  UsingTheCoreFunctions.hs
